# TimesFM

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.cursor/: gsd-file-manifest.json
.cursor/agents/: gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.cursor/get-shit-done/references/: artifact-types.md  decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  planner-revision.md  planning-config.md  verification-patterns.md
.cursor/get-shit-done/templates/: phase-prompt.md
.cursor/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  diagnose-issues.md  discovery-phase.md  (+44 more)
data/ml/: features.json  lgbm_gap.pkl  metrics.jsonl
deploy/: setup_vps.sh
scripts/: batch_rank.py  train_gap_ml.py  verify_remote.py
src/gap_dashboard/: __init__.py  alpaca_daily.py  api.py  app.py  config.py  email_alerts.py  gap_math.py  ml_features.py  ml_predict.py  pipeline.py  ranking_enrich.py  rate_limit.py  scheduler.py  timesfm_predict.py
src/us_stock_gap_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: index.html  package-lock.json
web/src/: App.css  App.tsx  index.css
(+68 files in other folders)
